--- a/Evaluation of Models Toolkit.ipynb
+++ b/Evaluation of Models Toolkit.ipynb
@@ -27,6 +27,13 @@
     "\n",
     "Again, you can compute these for both the traing and the test set. A big difference in value between the test and training set (R)MSE is an indication of overfitting.\n",
     "\n",
+    "#### R squared\n",
+    "\n",
+    "    r2 = model.score(X,y)\n",
+    "    print(r2)\n",
+    "    \n",
+    "\n",
+    "\n",
     "#### Mean Squared Error for test and train \n",
     "\n",
     "    train_residuals = y_hat_train - y_train\n",
@@ -34,8 +41,19 @@
     "    from sklearn.metrics import mean_squared_error\n",
     "    train_mse = mean_squared_error(y_train, y_hat_train)\n",
     "    test_mse = mean_squared_error(y_test, y_hat_test)\n",
-    "    print('Train Mean Squarred Error:', train_mse)\n",
-    "    print('Test Mean Squarred Error:', test_mse)\n",
+    "    print('Train Mean Squared Error:', train_mse)\n",
+    "    print('Test Mean Squared Error:', test_mse)\n",
+    "    \n",
+    "#### Mean Absolute Error\n",
+    "    \n",
+    "    train_residuals = y_hat_train - y_train\n",
+    "    test_residuals = y_hat_test - y_test\n",
+    "    from sklearn.metrics import mean_absolute_error\n",
+    "    train_mse = mean_squared_error(y_train, y_hat_train)\n",
+    "    test_mse = mean_absolute_error(y_test, y_hat_test)\n",
+    "    print('Train Mean Absolute Error:', train_mse)\n",
+    "    print('Test Mean Absolute Error:', test_mse)\n",
+    "\n",
     "    \n",
     "#### K-Fold Cross Validation¶\n",
     "K-Fold Cross Validation expands on the idea of training and testing splits by splitting the entire dataset into {K} equal sections of data. We'll then iteratively train {K} linear regression models on the data, with each linear model using a different section of data as the testing set, and all other sections combined as the training set.\n",
@@ -282,7 +300,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
