--- a/Visualizations Toolkit.ipynb
+++ b/Visualizations Toolkit.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stem and Leaf Plot (Matplotlib)\n",
+    "## Matplotlib\n",
+    "\n",
+    "Cheat Sheet: https://datacamp-community-prod.s3.amazonaws.com/28b8210c-60cc-4f13-b0b4-5b4f2ad4790b\n",
+    "\n",
+    "Documentation: https://matplotlib.org/\n",
+    "\n",
+    "### Stem and Leaf Plot - Matplotlib\n",
     "\n",
     "    import matplotlib.pyplot as plt\n",
     "    stems = []\n",
@@ -25,8 +31,180 @@
     "    plt.ylabel('Leafs', fontsize = 20)\n",
     "    plt.xlabel('Stems', fontsize = 20)\n",
     "\n",
+    "    plt.show()\n",
+    "    \n",
+    "### Keras Training/Validation Loss and Accuracy Plots - Matplotlib\n",
+    "\n",
+    "    # loss visualization\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    loss_values = model_val_dict['loss']\n",
+    "    val_loss_values = model_val_dict['val_loss']\n",
+    "\n",
+    "    epochs = range(1, len(loss_values) + 1)\n",
+    "    plt.plot(epochs, loss_values, 'g', label='Training loss')\n",
+    "    plt.plot(epochs, val_loss_values, 'blue', label='Validation loss')\n",
+    "\n",
+    "    plt.title('Training & validation loss')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #accuracy visualization\n",
+    "    acc_values = model_val_dict['acc'] \n",
+    "    val_acc_values = model_val_dict['val_acc']\n",
+    "\n",
+    "    plt.plot(epochs, acc_values, 'r', label='Training acc')\n",
+    "    plt.plot(epochs, val_acc_values, 'blue', label='Validation acc')\n",
+    "    plt.title('Training & validation accuracy')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.ylabel('Loss')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "### Matplotlib Images\n",
+    "\n",
+    "#### Intermedaite Activations in CNN\n",
+    "\n",
+    "**A model must already be saved in order for this visualization to be used**\n",
+    "\n",
+    "    #load saved model\n",
+    "    from keras.models import load_model\n",
+    "    model = load_model('chest_xray_all_with_augmentation_data.h5')\n",
+    "    model.summary()\n",
+    "    \n",
+    "    #load an image\n",
+    "    from keras.preprocessing import image\n",
+    "    import matplotlib.image as mpimg\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    %matplotlib inline\n",
+    "\n",
+    "    filename = 'person3_virus_16.jpeg'\n",
+    "    img = image.load_img(filename, target_size=(150, 150))\n",
+    "    plt.imshow(img)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #transform to tensor and visualize\n",
+    "    import numpy as np\n",
+    "\n",
+    "    img_tensor = image.img_to_array(img)\n",
+    "    img_tensor = np.expand_dims(img_tensor, axis=0)\n",
+    "\n",
+    "    #Follow the Original Model Preprocessing\n",
+    "    img_tensor /= 255.\n",
+    "\n",
+    "    #Check tensor shape\n",
+    "    print(img_tensor.shape)\n",
+    "\n",
+    "    #Preview an image\n",
+    "    plt.imshow(img_tensor[0])\n",
+    "    plt.show()\n",
+    "    \n",
+    "    #plot features map\n",
+    "    from keras import models\n",
+    "    import math #used for determining the number of rows in our figure below\n",
+    "\n",
+    "    # Extract model layer outputs\n",
+    "    layer_outputs = [layer.output for layer in model.layers[:8]]\n",
+    "\n",
+    "    # Create a model for displaying the feature maps\n",
+    "    activation_model = models.Model(inputs=model.input, outputs=layer_outputs)\n",
+    "\n",
+    "    activations = activation_model.predict(img_tensor)\n",
+    "\n",
+    "    #Extract Layer Names for Labelling\n",
+    "    layer_names = []\n",
+    "    for layer in model.layers[:8]:\n",
+    "        layer_names.append(layer.name)\n",
+    "\n",
+    "    total_features = sum([a.shape[-1] for a in activations])\n",
+    "    total_features\n",
+    "\n",
+    "    n_cols = 16\n",
+    "    n_rows = math.ceil(total_features / n_columns)\n",
+    "\n",
+    "\n",
+    "    iteration = 0\n",
+    "    fig , axes = plt.subplots(nrows=n_rows, ncols=n_columns, figsize=(n_cols, n_rows*1.5))\n",
+    "\n",
+    "    for layer_n, layer_activation in enumerate(activations):\n",
+    "        n_channels = layer_activation.shape[-1]\n",
+    "        for ch_idx in range(n_channels):\n",
+    "            row = iteration // n_columns\n",
+    "            column = iteration % n_columns\n",
+    "\n",
+    "            ax = axes[row, column]\n",
+    "\n",
+    "            channel_image = layer_activation[0,\n",
+    "                                             :, :,\n",
+    "                                             ch_idx]\n",
+    "            # Post-process the feature to make it visually palatable\n",
+    "            channel_image -= channel_image.mean()\n",
+    "            channel_image /= channel_image.std()\n",
+    "            channel_image *= 64\n",
+    "            channel_image += 128\n",
+    "            channel_image = np.clip(channel_image, 0, 255).astype('uint8')\n",
+    "\n",
+    "            ax.imshow(channel_image, aspect='auto', cmap='viridis')\n",
+    "            ax.get_xaxis().set_ticks([])\n",
+    "            ax.get_yaxis().set_ticks([])\n",
+    "\n",
+    "            if ch_idx == 0:\n",
+    "                ax.set_title(layer_names[layer_n], fontsize=10)\n",
+    "            iteration += 1\n",
+    "\n",
+    "    fig.subplots_adjust(hspace=1.25)\n",
+    "    plt.savefig(\"Intermediate_Activations_Visualized.pdf\")\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Seaborn\n",
+    "\n",
+    "Cheat Sheet:  https://s3.amazonaws.com/assets.datacamp.com/blog_assets/Python_Seaborn_Cheat_Sheet.pdf\n",
+    "\n",
+    "Documentation: https://seaborn.pydata.org/\n",
+    "\n",
+    "**not on cheatsheet**\n",
+    "- two types of objects (FacetGrid, AxesSubplot)\n",
+    "- relplot and catplot are FacetGrids\n",
+    "- check which object by setting the visual to a variable (g=sns.catplot())\n",
+    "- check type with type(g)\n",
+    "- add Title with g.fig.suptitle('Title') for FacetGrid\n",
+    "- add Title with g.set_title for AxesSubplot\n",
+    "\n",
+    "### Relplot\n",
+    "> Creates a relational plot that can contain several variables with unique customization\n",
+    "\n",
+    "    sns. relplot(x=x , y=y , data=data, kind=['scatter', 'line'], hue='separates colors into this variable', style='sets different point styles to this variable', aplha=.1-1.0, size='sets size of points based on count, setting to 'size' will vary the size by count', col='creates column style subplots based on varaibles', row='creates row style subplots based on variable, col_order='set col order [list], row_order=, set row order [list]\n",
+    "    \n",
+    "### Catplot\n",
+    "\n",
+    "> Same usecase as relplot, only for categorical data. Differences are:\n",
+    "- kind='count','bar','box', 'point'\n",
+    "- sym='changes style or use of outliers on boxplots'\n",
+    "- ci=None (removes ci marks from barchart)\n",
+    "- whis='can adjust range of whiskers in boxplot'\n",
+    "- order='similar to col_order and row_order'\n",
+    "- join= 'if set to False, will remove joining line in point plot'\n",
+    "- estimator= 'can change the estimation from mean to a numpy estimator (median, std, etc.)'\n",
+    "- capsize= 'places an upper and lower cap on the confidence interval lines with a set length'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bokeh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -112,6 +290,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
