--- a/Numpy Toolkit.ipynb
+++ b/Numpy Toolkit.ipynb
@@ -16,7 +16,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Numpy Help\n",
+    "\n",
+    "**help(np.function)** - will bring up a truncated explanation of the function requested, parameters and output"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
