--- a/Pandas Toolkit.ipynb
+++ b/Pandas Toolkit.ipynb
@@ -49,7 +49,10 @@
     "- df.info() | Index, Datatype and Memory information\n",
     "- df.describe() | Summary statistics for numerical columns\n",
     "- s.value_counts(dropna=False) | View unique values and counts\n",
-    "- df.apply(pd.Series.value_counts) | Unique values and counts for all columns"
+    "- df.apply(function) | calls a function to the entire dataframe\n",
+    "    - you can call the axis (0=columns, 1=rows)\n",
+    "    - you can call a result_type ('expand' = unwraps list, 'broadcast' = applies function to all columns)\n",
+    "    - can add args= for arguments"
    ]
   },
   {
@@ -114,7 +117,9 @@
     "- df.groupby(col1)[col2] | Returns the mean of the values in col2, grouped by the values in col1 (mean can be replaced with almost any function from the statistics module)\n",
     "- df.pivot_table(index=col1,values=[col2,col3],aggfunc=mean) | Create a pivot table that groups by col1 and calculates the mean of col2 and col3\n",
     "- df.groupby(col1).agg(np.mean) | Find the average across all columns for every unique col1 group\n",
-    "- df.apply(np.mean) | Apply the function np.mean() across each column\n",
+    "- df.apply(function, axis=) | Apply the function across the entire DataFrame\n",
+    "    - axis must be specified 0=column, 1=row)\n",
+    "    - can be used with lambda function\n",
     "- df.applymap() | Apply function element-wise\n",
     "- df.rank() | assign ranks to entries"
    ]
@@ -161,7 +166,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Iterating\n",
+    "\n",
+    "- iterrows() - creates an indexed list of each row observation (like iloc, but creates index) and stores as index and Series\n",
+    "- itertuples() - like itterrows, but strores data as a special tuple, that when calling the named value can call index and all columns by . method. ex. tuple.Index, tuple.Col1, tuple.Coln\n",
+    "\n",
+    "##### including Numpy to iterate\n",
+    "- pandas is built on Numpy, so DataFrames can essentially use broadcasting methods to perform functions\n",
+    "- df['column'].values will return a Numpy array of that column's values\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -187,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   },
   "toc": {
    "base_numbering": 1,
