--- a/Python Toolkit.ipynb
+++ b/Python Toolkit.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Checking for PEP-8 errors\n",
+    "#### Checking for PEP-8 errors\n",
     "\n",
     "    import pycodestyle\n",
     "\n",
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Help function\n",
+    "#### Help function\n",
     "\n",
     "Using before just about anything in the parentheses will bring up useful information on that call\n",
     "\n",
@@ -485,6 +485,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Recursive Functions\n",
+    "Recursion is a way of programming or coding a problem, in which a function calls itself one or more times in its body. Usually, it is returning the return value of this function call. If a function definition fulfills the condition of recursion, we call this function a recursive function.\n",
+    "\n",
+    "Termination condition:\n",
+    "A recursive function has to terminate to be used in a program. A recursive function terminates, if with every recursive call the solution of the problem is downsized and moves towards a base case. A base case is a case, where the problem can be solved without further recursion. A recursion can lead to an infinite loop, if the base case is not met in the calls.\n",
+    "\n",
+    "##### Fibonacci Sequence\n",
+    "    def fib(n):\n",
+    "        if n < 1:\n",
+    "            return \"N must be an integer greater then 1\" #will notify that positive integer is needed\n",
+    "        elif n in [1,2]:\n",
+    "                return 1 #since addition of first two elements differs from the rest, need the elif statement\n",
+    "        else:\n",
+    "            return fib(n-1) + fib(n-2) #recursive part that takes the number provided, and returns the proper calculation\n",
+    "    \n",
+    "    for i in range(1, 10):\n",
+    "        print(fib(i))\n",
+    "        \n",
+    "##### Flatten a  List \n",
+    "    def flat_list(L, result=[]):\n",
+    "        print('Current L:', L) #Optional, to display process\n",
+    "        for i in L:\n",
+    "            if type(i) == list:\n",
+    "                flat_list(i, result)\n",
+    "            else:\n",
+    "                result.append(i)\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Generators\n",
     "Creates iterable results from a function design\n",
     "- def function(params):\n",
@@ -705,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
