--- a/Hyperparameters-GridSearchCV.ipynb
+++ b/Hyperparameters-GridSearchCV.ipynb
@@ -161,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Juniors",
    "language": "python",
-   "name": "learn-env"
+   "name": "jrenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -175,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
