--- a/Neural Networks Toolkit.ipynb
+++ b/Neural Networks Toolkit.ipynb
@@ -949,33 +949,13 @@
     "    model.add(Activation('softmax'))\n",
     "    model.compile(loss='categorical_crossentropy', optimizer='rmsprop')\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "Juniors",
    "language": "python",
-   "name": "learn-env"
+   "name": "jrenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -987,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
