--- a/Pandas Toolkit.ipynb
+++ b/Pandas Toolkit.ipynb
@@ -5,14 +5,42 @@
    "metadata": {},
    "source": [
     "#### Importing Data\n",
-    "- pd.read_csv(filename) | From a CSV file\n",
+    "- pd.read_csv(filename, sep=delimiter, usecols=load these cols, nrows=# of rows, skiprows=# of rows to skip, names=column names, dtype={'colname':dtype}, na_values={'colname':na_value}, error_bad_lines=False(skips corrupted lines of data), warn_bad_lines=True (provides message of line when skipped)) | From any flat file (CSV,TSV,etc)\n",
     "- pd.read_table(filename) | From a delimited text file (like TSV)\n",
-    "- pd.read_excel(filename) | From an Excel file\n",
-    "- pd.read_sql(query, connection_object) | Read from a SQL table/database\n",
-    "- pd.read_json(json_string) | Read from a JSON formatted string, URL or file.\n",
+    "- pd.read_excel(filename, usecols='A:G,AA,ZZ', sheet_name=see below, true_values=['value to set to True'], false_values=['value to set to False'], parse_dates['date column to be converted to datetime']) | From an Excel file\n",
+    "    - sheet_name: can use number of sheet or name of sheet. To load all sheets, will need to set sheet_name=None. If set to None, will load as dictionary objects. Will need to loop through the values in order to combine dataframes:\n",
+    "                   \n",
+    "                    # Create an empty data frame\n",
+    "                    all_responses = pd.DataFrame()\n",
+    "\n",
+    "                    # Set up for loop to iterate through values in responses\n",
+    "                    for df in responses.values():\n",
+    "                      # Print the number of rows being added\n",
+    "                      print(\"Adding {} rows\".format(df.shape[0]))\n",
+    "                      # Append df to all_responses, assign result\n",
+    "                      all_responses = all_responses.append(df)\n",
+    "  \n",
+    "- pd.read_sql(query(vary per file type), connection_engine) | Read from a SQL table/database\n",
+    "    * need to create engine using sqlalchemy before calling http://localhost:8888/notebooks/repos/Toolkit/SQL-noSQL%20Toolkit.ipynb#SQLalchemy-and-Object-Relation-Mappers-(ORM)\n",
+    "- pd.read_json(json_string, orient=('record, column, split') | Read from a JSON formatted string, URL or file.\n",
     "- pd.read_html(url) | Parses an html URL, string or file and extracts tables to a list of dataframes\n",
     "- pd.read_clipboard() | Takes the contents of your clipboard and passes it to read_table()\n",
-    "- pd.DataFrame(dict) | From a dict, keys for columns names, values for data as lists"
+    "- pd.DataFrame(dict) | From a dict, keys for columns names, values for data as lists\n",
+    "\n",
+    "##### loading nested JSON\n",
+    "- need to import: from pandas.io.json import json_normalize\n",
+    "- json_normalize(sep=delimiter,record_path=string path attribute, meta=list of other attributes, meta_prefix=separates metadata by prefix) | Returns a dictionary/list of dictionaries and returns a flattened dataframe\n",
+    "\n",
+    "        # deep nested example using record path and meta arguments\n",
+    "        flat_cafes = json_normalize(data[\"businesses\"],\n",
+    "                                    sep=\"_\",\n",
+    "                                    record_path=\"categories\",\n",
+    "                                    meta=['name', \n",
+    "                                          'alias',  \n",
+    "                                          'rating',\n",
+    "                                          ['coordinates', 'latitude'], \n",
+    "                                          ['coordinates', 'longitude']],\n",
+    "                                    meta_prefix='biz_')"
    ]
   },
   {
@@ -131,7 +159,8 @@
     "#### Join/Combine\n",
     "- df1.append(df2) | Add the rows in df1 to the end of df2 (columns should be identical)\n",
     "- pd.concat([df1, df2],axis=1) | Add the columns in df1 to the end of df2 (rows should be identical)\n",
-    "- df1.join(df2,on=col1,how='inner') | SQL-style join the columns in df1 with the columns on df2 where the rows forcol have identical values. 'how' can be one of 'left', 'right', 'outer', 'inner'"
+    "- df1.join(df2,on=col1,how='inner') | SQL-style join the columns in df1 with the columns on df2 where the rows forcol have identical values. 'how' can be one of 'left', 'right', 'outer', 'inner'\n",
+    "- df1.merge(df2, on=column, left_on=df1 column,right_on=df2 column) | merges dataframes on a specified matching key column (must be same datatype, only merges matching data in both dfs)"
    ]
   },
   {
@@ -201,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.6"
   },
   "toc": {
    "base_numbering": 1,
