--- a/Apache pySpark Toolkit.ipynb
+++ b/Apache pySpark Toolkit.ipynb
@@ -82,6 +82,11 @@
    "source": [
     "## Spark Context\n",
     "\n",
+    "#### SparkConf\n",
+    "- configures a Spark Context including Java properties\n",
+    "\n",
+    "        pyspark.SparkConf(loadDefaults=True, _jvm=None, _jconf=None)\n",
+    "\n",
     "#### Create a local spark context with pyspark\n",
     "    import pyspark\n",
     "    sc = pyspark.SparkContext('local[*]')\n",
@@ -109,6 +114,118 @@
     "    \n",
     "#### Shut down SparkContext\n",
     "    sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spark DataFrame\n",
+    "- The Spark DataFrame was designed to behave a lot like a SQL table (a table with variables in the columns and observations in the rows). Not only are they easier to understand, DataFrames are also more optimized for complicated operations than RDD\n",
+    "- To start working with Spark DataFrames, you first have to create a SparkSession object from your SparkContext. You can think of the SparkContext as your connection to the cluster and the SparkSession as your interface with that connection.\n",
+    "\n",
+    "        # Import SparkSession from pyspark.sql\n",
+    "        from pyspark.sql import SparkSession\n",
+    "\n",
+    "        # Create my_spark\n",
+    "        my_spark = SparkSession.builder.getOrCreate()\n",
+    "\n",
+    "        # Print my_spark\n",
+    "        print(my_spark)\n",
+    "#### catalog\n",
+    "- lists all data inside your cluster\n",
+    "\n",
+    "        print(spark.catalog.listTables())\n",
+    "        \n",
+    "#### queries\n",
+    "- SQL query format\n",
+    "\n",
+    "        # create a SQL query\n",
+    "        query = \"FROM flights SELECT * LIMIT 10\"\n",
+    "        # Get the first 10 rows of flights\n",
+    "        flights10 = spark.sql(query)\n",
+    "        # Show the results\n",
+    "        flights10.show()\n",
+    "#### Spark Cluster to Pandas DataFrame\n",
+    "- convert with the .toPandas() method\n",
+    "\n",
+    "        # create a query\n",
+    "        query = \"SELECT origin, dest, COUNT(*) as N FROM flights GROUP BY origin, dest\"\n",
+    "        # Run the query\n",
+    "        flight_counts = spark.sql(query)\n",
+    "        # Convert the results to a pandas DataFrame\n",
+    "        pd_counts = flight_counts.toPandas()\n",
+    "        # Print the head of pd_counts\n",
+    "        print(pd_counts.head())\n",
+    "#### DataFrame to Spark Cluster\n",
+    "- the .createDataFrame() method will convert a DF to a Spark Cluster\n",
+    "        \n",
+    "        spark_temp = spark.createDataFrame(pd_temp)\n",
+    "#### Temporary View\n",
+    "- will allow spark to create a temporary cluster to use spark commands on a DataFrame\n",
+    "\n",
+    "        spark_temp.createOrReplaceTempView('new_table_name')\n",
+    "#### Direct read-in of datasources\n",
+    "- allows direct conversion to a spark dataframe for several file types\n",
+    "\n",
+    "        #  file path to .csv\n",
+    "        file_path = \"/usr/local/share/datasets/airports.csv\"\n",
+    "\n",
+    "        # Read in the airports data\n",
+    "        airports = spark.read.csv(file_path, header=True)\n",
+    "\n",
+    "        # Show the data\n",
+    "        airports.show()\n",
+    "#### creating columns\n",
+    "- In Spark you can do this using the .withColumn() method, which takes two arguments. First, a string with the name of your new column, and second the new column input\n",
+    "- Spark dataframes are immutable, so adding new columns means reassigning the df.\n",
+    "\n",
+    "        df = df.withColumn(\"newCol\", df.column.mean()) #using the mean of another column to create values for new column \n",
+    "#### filtering results\n",
+    "- similar to the WHERE clause in SQL\n",
+    "- two ways of filtering:\n",
+    "    - passing a string value will filter out the values listed\n",
+    "    - passing in the direct df.column with the filter will create a new column will boolean values.\n",
+    "    \n",
+    "            # Filter flights by passing a string\n",
+    "            long_flights1 = flights.filter(\"distance > 1000\")\n",
+    "\n",
+    "            # Filter flights by passing a column of boolean values\n",
+    "            long_flights2 = flights.filter(flights.distance > 1000)\n",
+    "#### select columns\n",
+    "- similar to SQL SELECT statement\n",
+    "- takes multiple arguments - one for each column you want to select. These arguments can either be the column name as a string (one for each column) or a column object (using the df.colName syntax). When you pass a column object, you can perform operations like addition or subtraction on the column to change the data contained in it\n",
+    "- can also use column-wise operations \n",
+    "\n",
+    "        # Select columns using column strings\n",
+    "        selected1 = flights.select('tailnum', 'origin', 'dest')\n",
+    "\n",
+    "        # Select columns using df.column format\n",
+    "        temp = flights.select(flights.origin, flights.dest, flights.carrier)\n",
+    "        #using operations to create a column\n",
+    "        avg_speed = (flights.distance/(flights.air_time/60))\n",
+    "        \n",
+    "#### alias\n",
+    "- renames a column when selecting\n",
+    "\n",
+    "        #rename column to avg_speed\n",
+    "        avg_speed = (flights.distance/(flights.air_time/60)).alias(\"avg_speed\")\n",
+    "#### aggregating\n",
+    "- you can aggregate with common methods by using the .groupBy() method\n",
+    "- creating groups using the .groupby() allows them to be part of a pyspark.sql.GroupedData class\n",
+    "        \n",
+    "        #using filter and groupby to fingd the shortest flight from PDX\n",
+    "        flights.filter(flights.origin == 'PDX').groupBy().min(\"distance\").show()\n",
+    "- you can also use the .agg() function which allows use of any of the pyspark.sql.functions library\n",
+    "\n",
+    "        #import functions\n",
+    "        import pyspark.sql.functions as F\n",
+    "        #find standard deviation of a columns\n",
+    "        df.column.agg(F.stddev()).show()\n",
+    "#### joining\n",
+    "- performed using the df.join() method\n",
+    "    \n",
+    "        joined_df = df.join(joining_df, on='joining_column', how='how_to_join')"
    ]
   },
   {
@@ -170,40 +287,105 @@
    "source": [
     "## Machine Learning in Spark\n",
     "\n",
-    "### A Tale of Two Libraries\n",
+    "### ml and mllib machine learning libraries\n",
     "\n",
-    "If you look at the pyspark documentation, you'll notice that there are two different libraries for machine learning [mllib](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html) and [ml](https://spark.apache.org/docs/latest/api/python/pyspark.ml.html). These libraries are extremely similar to one another, the only difference being that the mllib library is built upon the RDDs you just practiced using; whereas, the ml library is built on higher level Spark DataFrames (SQL), which has methods and attributes very similar to pandas. It's important to note that these libraries are much younger than pandas and many of the kinks are still being worked out. \n",
+    "[mllib](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html)\n",
+    "- mllib library is built upon the RDDs \n",
+    "[ml](https://spark.apache.org/docs/latest/api/python/pyspark.ml.html)\n",
+    "- ml library is built on Spark DataFrames\n",
     "\n",
-    "#### import packages (SparkSession is dataframe instationation)\n",
-    "    from pyspark import SparkContext\n",
-    "    from pyspark.sql import SparkSession\n",
-    "    spark = SparkSession.builder.master(\"local\").appName(\"machine learning\").getOrCreate() #opens ml library\n",
-    "    spark_df = spark.read.csv('./forestfires.csv',header='true',inferSchema='true') #import data\n",
-    "    #observing the datatype of df\n",
-    "    type(spark_df)\n",
+    "\n",
     "    \n",
-    "#### spark methods similar to pandas\n",
-    "    spark_df.head() #returns n rows of data as column=data pair \n",
-    "    spark_df.columns #returns column names\n",
-    "    spark_df[['month','day','rain']].head() #returns first data in selected columns\n",
+    "#### ml library\n",
     "\n",
-    "#### Aggregate data for display\n",
-    "    spark_df_months = spark_df.groupBy('month').agg({'area':'mean'})\n",
-    "    spark_df_months.collect() #must use collect in spark\n",
-    "    \n",
-    "### ML\n",
+    "- used sklearn as an inspiration for their implementation of a machine learning library. As a result, many of the methods and functionalities look similar, but there are some crucial distinctions. There two main classes\n",
     "\n",
-    "Pyspark openly admits that they used sklearn as an inspiration for their implementation of a machine learning library. As a result, many of the methods and functionalities look similar, but there are some crucial distinctions. There are four main concepts found within the ML library:\n",
+    "`Transformer`\n",
+    "- An algorithm that transforms one pyspark DataFrame into another DataFrame.\n",
+    "- uses the .transform() method\n",
+    "- returns a new dataframe, usually with a new column appended\n",
+    "- examples of classes: Bucketizer, PCA\n",
     "\n",
-    "`Transformer`: An algorithm that transforms one pyspark DataFrame into another DataFrame. \n",
+    "`Estimator`\n",
+    "- An algorithm that can be fit onto a pyspark DataFrame that can then be used as a Transformer.\n",
+    "- uses the .fit() method\n",
+    "- returns a model object\n",
+    "- examples of calsses: StringIndexerColum, RandomForestModel\n",
     "\n",
-    "`Estimator`: An algorithm that can be fit onto a pyspark DataFrame that can then be used as a Transformer. \n",
+    "#### ml library machine learning steps\n",
     "\n",
-    "`Pipeline`: A pipeline very similar to an sklearn pipeline that chains together different actions.\n",
+    "##### ensure proper data types\n",
+    "- only takes numbers (decimals, whole numbers) called 'doubles','integers' in Spark\n",
+    "- Spark will make a guess on datatypes, if not recognized as a double or integer, you can use the .cast() method in combination of .withColumn() method to convert the datatype (\"integer\", \"double\")\n",
     "\n",
-    "The reasoning behind this separation of the fitting and transforming step is because sklearn is lazily evaluated, so the 'fitting' of a model does not actually take place until the Transformation action is called.\n",
+    "        #create new column with numerical data\n",
+    "        original_df = original_df.withColumn(\"col_name\", df.col_name.cast('datatype')\n",
+    "##### handle categorical variables\n",
+    "- there are two steps to take to one-hot-encode categorical variables:\n",
+    "- step 1: use StringIndexer to convert distinct variables to individual numbered columns\n",
     "\n",
-    "#### Creating an ML pipeline object\n",
+    "        #create stringindexer\n",
+    "        indexer = StringIndexer(inputCol='col_name', outputCol='new_cols_name')\n",
+    "- step 2: use OneHotEncoder to OHE the columns\n",
+    "        \n",
+    "        #create ohe\n",
+    "        encoder = OneHotEncoder(inputCol='col_name', outputCol='new_cols_name'\n",
+    "##### assemble a vector\n",
+    "- Spark modeling requires all columns containing features to be combined in one column\n",
+    "- done using VectorAssembler\n",
+    "\n",
+    "        #assemble matrix into a vector\n",
+    "        assembler = VectorAssembler(inputCols=['list', 'of', 'col', 'names'], outputCol='feature')\n",
+    "##### create a pipeline\n",
+    "- combines all estimators and transformers\n",
+    "- wraps the process so you can reuse the named pipeline\n",
+    "\n",
+    "        #import pipeline\n",
+    "        from pyspark.ml import Pipeline\n",
+    "        #make pipeline\n",
+    "        pipeline = Pipeline(stages=[indexer, encoder, assembler])\n",
+    "##### fit and transform data\n",
+    "\n",
+    "        #fit and transform\n",
+    "        piped_data = pipeline.fit(model_data).transform(model_data)\n",
+    "##### split data into train and test sets\n",
+    "\n",
+    "        #split data\n",
+    "        training, test = piped_data.randomSplit([.7,.3])\n",
+    "##### run selected model\n",
+    "- there are many models to choose from, ensure proper package is imported and instantiated\n",
+    "##### select evaluation method\n",
+    "- select evaluation via pyspark.ml.evaluation\n",
+    "        \n",
+    "        evaluator = selectedEvaluationMethod()\n",
+    "##### hyperparameter tuning\n",
+    "- performed using the pyspark.ml.tuning library\n",
+    "- if several parameters will be tuned, use ParamGridBuilder() method\n",
+    "\n",
+    "        #import tuning package\n",
+    "        import pyspark.ml.tuning as tune\n",
+    "        #create grid\n",
+    "        grid = ParamGridBuilder()\n",
+    "        #replace the grid with all additions\n",
+    "        grid = grid.addGrid(model.parameter, [0,1,2])\n",
+    "        grid = grid.addGrid(model.parameter, [0,1,2])\n",
+    "        #build the grid\n",
+    "        grid = grid.build()\n",
+    "##### create the validator        \n",
+    "- the tuning module also contains the CrossValidator class which will implement your selected evaluator\n",
+    "\n",
+    "        #create crossvalidator\n",
+    "        cv = tune.CrossValidator(estimator=model_name,\n",
+    "                                 estimatorParamMaps=grid,\n",
+    "                                 evaluator=evaluator)\n",
+    "##### fit training data\n",
+    "    best_model = model_name.fit(training)\n",
+    "##### predict test data\n",
+    "    results = best_model.transform(test)\n",
+    "##### evaluate model\n",
+    "    print(evaluator.evaluate(test_results))\n",
+    "\n",
+    "#### Sample ml library Pipeline\n",
     "\n",
     "    from pyspark.ml.tuning import ParamGridBuilder, TrainValidationSplit, CrossValidator\n",
     "    from pyspark.ml.evaluation import RegressionEvaluator\n",
