--- a/Pandas Toolkit.ipynb
+++ b/Pandas Toolkit.ipynb
@@ -171,6 +171,7 @@
     "These can all be applied to a series as well.\n",
     "\n",
     "- df.describe() | Summary statistics for numerical columns\n",
+    "    - to describe non-numeric columns add argument exclude= 'number'\n",
     "- df.mean() | Returns the mean of all columns\n",
     "- df.corr() | Returns the correlation between columns in a DataFrame\n",
     "- df.count() | Returns the number of non-null values in each DataFrame column\n",
@@ -230,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.10"
   },
   "toc": {
    "base_numbering": 1,
