--- a/Clustering.ipynb
+++ b/Clustering.ipynb
@@ -103,18 +103,49 @@
    "source": [
     "### KMeans Clustering\n",
     "\n",
-    "    # Import kmeans and vq functions\n",
-    "    from scipy.cluster.vq import kmeans, vq\n",
+    "- clusters faster than hierarchal\n",
     "\n",
-    "    # Compute cluster centers\n",
-    "    centroids,_ = kmeans(df, 2)\n",
+    "#### kmeans()\n",
     "\n",
-    "    # Assign cluster labels\n",
-    "    df['cluster_labels'], _ = vq(df, centroids)\n",
+    "- obs - standardized observations\n",
+    "- k_or_guess - number of clusters\n",
+    "- iter - number of iterations (default 20)\n",
+    "- thresh - threshold (default 1e-05)\n",
+    "- check_finite - bbolean whether to check if observations contain only finite numbers\n",
+    "- returns cluster centers, distortion\n",
     "\n",
-    "    # Plot the points with seaborn\n",
-    "    sns.scatterplot(x='x', y='y', hue='cluster_labels', data=df)\n",
-    "    plt.show()"
+    "##### distortion\n",
+    "\n",
+    "- sum of squares of distances of points from cluster centers\n",
+    "- distortion decreases with increasing # of clusters (zero when == # of points)\n",
+    "\n",
+    "#### vq()\n",
+    "\n",
+    "- generates cluster labels\n",
+    "- obs - standardized observations\n",
+    "- code_book - cluster centers\n",
+    "- check_finite - boolean whether to check if observations contain only finite numbers\n",
+    "- returns list of cluster labels, list of distortions\n",
+    "\n",
+    "        # Import the kmeans and vq functions\n",
+    "        from scipy.cluster.vq import kmeans, vq\n",
+    "\n",
+    "        # Generate cluster centers\n",
+    "        cluster_centers, distortion = kmeans(comic_con[['x_scaled', 'y_scaled']], 2)\n",
+    "\n",
+    "        # Assign cluster labels\n",
+    "        comic_con['cluster_labels'], distortion_list = vq(comic_con[['x_scaled', 'y_scaled']],code_book=cluster_centers)\n",
+    "\n",
+    "        # Plot clusters\n",
+    "        sns.scatterplot(x='x_scaled', y='y_scaled', \n",
+    "                        hue='cluster_labels', data = comic_con)\n",
+    "        plt.show()\n",
+    "        \n",
+    "#### Limits of kmeans\n",
+    "\n",
+    "- how to find the right # of clusters\n",
+    "- impact of multiple random seeds\n",
+    "- biased towards equal sized clusters"
    ]
   },
   {
@@ -167,28 +198,156 @@
     "        dn = dendrogram(distance_matrix)\n",
     "\n",
     "        # Display the dendogram\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "        \n",
+    "#### Elbow charts\n",
+    "\n",
+    "- helps in determing # of clusters in k-means clustering\n",
+    "- x = # of clusters, y = distortion\n",
+    "- only gives _indication_ of optimal clusters\n",
+    "\n",
+    "        distortions = []\n",
+    "        num_clusters = range(1, 7)\n",
+    "\n",
+    "        # Create a list of distortions from the kmeans function\n",
+    "        for i in num_clusters:\n",
+    "            cluster_centers, distortion = kmeans(comic_con[['x_scaled', 'y_scaled']],i)\n",
+    "            distortions.append(distortion)\n",
+    "\n",
+    "        # Create a data frame with two lists - num_clusters, distortions\n",
+    "        elbow_plot = pd.DataFrame({'num_clusters': num_clusters, 'distortions': distortions})\n",
+    "\n",
+    "        # Creat a line plot of num_clusters and distortions\n",
+    "        sns.lineplot(x='num_clusters', y='distortions', data = elbow_plot)\n",
+    "        plt.xticks(num_clusters)\n",
+    "        plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Other methods to determine optimal clusters\n",
+    "\n",
+    "####  Average Silhouette\n",
+    "\n",
+    "#### Gap Statistic"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Clustering Example (Dominant Colors)\n",
+    "\n",
+    "    # Import image class of matplotlib\n",
+    "    import matplotlib.image as img\n",
+    "\n",
+    "    # Read batman image and print dimensions\n",
+    "    batman_image = img.imread('batman.jpg')\n",
+    "    print(batman_image.shape)\n",
+    "\n",
+    "    # Store RGB values of all pixels in lists r, g and b\n",
+    "    for row in batman_image:\n",
+    "        for temp_r, temp_g, temp_b in row:\n",
+    "            r.append(temp_r)\n",
+    "            g.append(temp_g)\n",
+    "            b.append(temp_b)\n",
+    "    distortions = []\n",
+    "    \n",
+    "    num_clusters = range(1, 7)\n",
+    "\n",
+    "    # Create a list of distortions from the kmeans function\n",
+    "    for i in num_clusters:\n",
+    "        cluster_centers, distortion = kmeans(batman_df[['scaled_red', 'scaled_blue', 'scaled_green']], i)\n",
+    "        distortions.append(distortion)\n",
+    "\n",
+    "    # Create a data frame with two lists, num_clusters and distortions\n",
+    "    elbow_plot = pd.DataFrame({'num_clusters': num_clusters, 'distortions': distortions})\n",
+    "\n",
+    "    # Create a line plot of num_clusters and distortions\n",
+    "    sns.lineplot(x='num_clusters', y='distortions', data = elbow_plot)\n",
+    "    plt.xticks(num_clusters)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    # Get standard deviations of each color\n",
+    "    r_std, g_std, b_std = batman_df[['red', 'green', 'blue']].std()\n",
+    "\n",
+    "    for cluster_center in cluster_centers:\n",
+    "        scaled_r, scaled_g, scaled_b = cluster_center\n",
+    "        # Convert each standardized value to scaled value\n",
+    "        colors.append((\n",
+    "            scaled_r * r_std / 255,\n",
+    "            scaled_g * g_std / 255,\n",
+    "            scaled_b * b_std / 255\n",
+    "        ))\n",
+    "\n",
+    "    # Display colors of cluster centers\n",
+    "    plt.imshow([colors])\n",
+    "    plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Clustering Example (Document)\n",
+    "\n",
+    "    # Import TfidfVectorizer class from sklearn\n",
+    "    from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "    # Initialize TfidfVectorizer\n",
+    "    tfidf_vectorizer = TfidfVectorizer(min_df=0.1, max_df=0.75, max_features=50, tokenizer= remove_noise)\n",
+    "\n",
+    "    # Use the .fit_transform() method on the list plots\n",
+    "    tfidf_matrix = tfidf_vectorizer.fit_transform(plots)\n",
+    "    \n",
+    "    num_clusters = 2\n",
+    "\n",
+    "    # Generate cluster centers through the kmeans function\n",
+    "    cluster_centers, distortion = kmeans(tfidf_matrix.todense(), num_clusters)\n",
+    "\n",
+    "    # Generate terms from the tfidf_vectorizer object\n",
+    "    terms = tfidf_vectorizer.get_feature_names()\n",
+    "\n",
+    "    for i in range(num_clusters):\n",
+    "        # Sort the terms and print top 3 terms\n",
+    "        center_terms = dict(zip(terms, list(cluster_centers[i])))\n",
+    "        sorted_terms = sorted(center_terms, key=center_terms.get, reverse=True)\n",
+    "        print(sorted_terms)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Clustering Example (Multiple Features)\n",
+    "- consider feature reduction using factor analysis or multidimensional scaling\n",
+    "\n",
+    "            # Print the size of the clusters\n",
+    "        print(fifa.groupby('cluster_labels')['ID'].count())\n",
+    "\n",
+    "        # Print the mean value of wages in each cluster\n",
+    "        print(fifa.groupby('cluster_labels')['eur_wage'].mean())\n",
+    "        \n",
+    "        # Create centroids with kmeans for 2 clusters\n",
+    "        cluster_centers,_ = kmeans(fifa[scaled_features], 2)\n",
+    "        \n",
+    "        # Create centroids with kmeans for 2 clusters\n",
+    "        cluster_centers,_ = kmeans(fifa[scaled_features], 2)\n",
+    "\n",
+    "        # Assign cluster labels and print cluster centers\n",
+    "        fifa['cluster_labels'], _ = vq(fifa[scaled_features], cluster_centers)\n",
+    "        print(fifa.groupby('cluster_labels')[scaled_features].mean())\n",
+    "        \n",
+    "        # Plot cluster centers to visualize clusters\n",
+    "        fifa.groupby('cluster_labels')[scaled_features].mean().plot(legend=True, kind='bar')\n",
+    "        plt.show()\n",
+    "        \n",
+    "        # Get the name column of top 5 players in each cluster\n",
+    "        for cluster in fifa['cluster_labels'].unique():\n",
+    "            print(cluster, fifa[fifa['cluster_labels'] == cluster]['name'].values[:5])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -228,7 +387,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "139.489px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
