--- a/Evaluation of Models Toolkit.ipynb
+++ b/Evaluation of Models Toolkit.ipynb
@@ -447,16 +447,16 @@
    "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
-   "sideBar": true,
+   "sideBar": false,
    "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {
-    "height": "calc(100% - 180px)",
-    "left": "10px",
-    "top": "150px",
-    "width": "139.489px"
+    "height": "432.364px",
+    "left": "0.579907px",
+    "top": "53.455px",
+    "width": "208.091px"
    },
    "toc_section_display": true,
    "toc_window_display": true
