--- a/Neural Networks Toolkit.ipynb
+++ b/Neural Networks Toolkit.ipynb
@@ -953,9 +953,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Juniors",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "jrenv"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -967,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.6.10"
   },
   "toc": {
    "base_numbering": 1,
